--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
       background: linear-gradient(to bottom, #000, #111, #000);
       color: white;
     }
+    .aviso {
+      background: red;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-weight: bold;
+      font-size: 1rem;
+    }
     header {
       position: fixed;
-      top: 0;
+      top: 50px; /* abaixo do aviso */
       width: 100%;
       background: rgba(0, 0, 0, 0.6);
       backdrop-filter: blur(8px);
@@ -37,13 +45,13 @@
       color: #ec4899;
     }
     section {
-      padding: 100px 20px;
+      padding: 120px 20px 60px 20px;
       max-width: 900px;
       margin: auto;
     }
     .hero {
       text-align: center;
-      padding-top: 120px;
+      padding-top: 50px;
     }
     .hero h2 {
       font-size: 2.5rem;
@@ -111,9 +119,19 @@
       background: #000;
       color: #777;
     }
+    footer a {
+      color: #ec4899;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
+
+  <!-- AVISO -->
+  <div class="aviso">
+    ⚠️ Site de teste e todo não está funcionando ok ❤
+  </div>
+
   <!-- HEADER -->
   <header>
     <h1>PrincesaGabriellyyt</h1>
@@ -184,15 +202,20 @@
   <section id="contato">
     <h2 class="section-title">Contato</h2>
     <p style="text-align:center; margin-top:15px;">
-      🌐 <a href="https://www.roblox.com/" target="_blank" style="color:#3b82f6;">Meu Roblox</a><br>
-      🎥 <a href="https://youtube.com/" target="_blank" style="color:#ef4444;">Meu YouTube</a><br>
-      📸 <a href="#" style="color:#ec4899;">Instagram</a>
+      🌐 <a href="https://www.roblox.com/" target="_blank">Meu Roblox</a><br>
+      🎥 <a href="https://youtube.com/" target="_blank">Meu YouTube</a><br>
+      📸 <a href="#">Instagram</a>
     </p>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 PrincesaGabriellyyt. Todos os direitos reservados 👑</p>
+    <p>© <span id="ano"></span> PrincesaGabriellyyt. Todos os direitos reservados 👑</p>
   </footer>
+
+  <script>
+    // Coloca o ano automaticamente (2025)
+    document.getElementById("ano").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
